this is array assignment

--- a/ppt-ass-1.ipynb
+++ b/ppt-ass-1.ipynb
@@ -391,8 +391,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "a2864651-6eb2-4be3-84d0-0432afb455ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findErrorNums(nums):\n",
+    "    seen = set()\n",
+    "    duplicate = 0\n",
+    "    missing = 0\n",
+    "\n",
+    "    for num in nums:\n",
+    "        if num in seen:\n",
+    "            duplicate = num\n",
+    "        else:\n",
+    "            seen.add(num)\n",
+    "\n",
+    "    for i in range(1, len(nums) + 1):\n",
+    "        if i not in seen:\n",
+    "            missing = i\n",
+    "\n",
+    "    return [duplicate, missing]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "69265bfd-bc3e-4b92-a22e-114e04ced5a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output: [2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [1, 2, 2, 4]\n",
+    "result = findErrorNums(nums)\n",
+    "print(\"Output:\", result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79b2b7ac-a059-4419-b550-16a42688e4d4",
    "metadata": {},
    "outputs": [],
    "source": []
