--- a/ppt-ass-2.ipynb
+++ b/ppt-ass-2.ipynb
@@ -364,9 +364,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "71c41a2a-fb7b-4f20-a3e0-b2ca5bd5f28b",
+   "metadata": {},
+   "source": [
+    "Question 8\n",
+    "You are given an integer array nums and an integer k.\n",
+    "\n",
+    "In one operation, you can choose any index i where 0 <= i < nums.length and change nums[i] to nums[i] + x where x is an integer from the range [-k, k]. You can apply this operation at most once for each index i.\n",
+    "\n",
+    "The score of nums is the difference between the maximum and minimum elements in nums.\n",
+    "\n",
+    "Return the minimum score of nums after applying the mentioned operation at most once for each index in it.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f10a22c1-e64f-4dae-b92c-5fd4864803df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def minDifference(nums, k):\n",
+    "    min_val = float('inf')\n",
+    "    max_val = float('-inf')\n",
+    "\n",
+    "    for num in nums:\n",
+    "        min_val = min(min_val, num - k)\n",
+    "        max_val = max(max_val, num + k)\n",
+    "\n",
+    "    return max_val - min_val\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e5c1b377-6d9b-46e6-876d-1672cd7d401d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [1]\n",
+    "k = 0\n",
+    "result = minDifference(nums, k)\n",
+    "print(\"Output:\", result)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c6dedf6-2064-45fb-ae3b-dec6626ab3bd",
+   "id": "77d875b5-f35a-42f3-a216-053ada94c019",
    "metadata": {},
    "outputs": [],
    "source": []
